--- a/scss/layout/_nav.scss
+++ b/scss/layout/_nav.scss
@@ -13,7 +13,7 @@
   ul.opening {
     display: block;
     text-align: center;
-    font-size: 35px;
+    font-size: 38px;
     font-weight: 700;
     background: url("https://res.cloudinary.com/mtreeves24/image/upload/c_crop,f_auto,g_center,h_1600,q_60,w_1200/v1600105784/Exotic%20Explorers/triangles-darkgreen.svg")
       no-repeat center;
